Implement persistence layer for the Group, User and GitAccount BO.